# colusa-cli

./: CLAUDE.md  README.md  pyproject.toml
openspec/changes/archive/2026-03-27-add-colusa-config-file/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-27-add-colusa-config-file/specs/cli-entrypoint/: spec.md
openspec/changes/archive/2026-03-27-add-colusa-config-file/specs/config-loading/: spec.md
openspec/changes/archive/2026-03-27-add-colusa-config-file/specs/site-rule-matching/: spec.md
openspec/changes/archive/2026-03-27-bundle-default-site-rules/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-27-bundle-default-site-rules/specs/config-loading/: spec.md
openspec/changes/archive/2026-03-27-bundle-default-site-rules/specs/default-site-rules/: spec.md
openspec/changes/archive/2026-03-27-bundle-default-site-rules/specs/list-rules-command/: spec.md
openspec/specs/cli-entrypoint/: spec.md
openspec/specs/config-loading/: spec.md
openspec/specs/default-site-rules/: spec.md
openspec/specs/list-rules-command/: spec.md
openspec/specs/site-rule-matching/: spec.md
src/colusa_cli/: browser.py  cli.py  config.py  defaults.toml  doh.py  etr.py  fetch.py  markdown_visitor.py  visitor.py
src/colusa_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_config.py  test_defaults_rules.py
